implementado filtro no index.html

--- a/app-front/index.html
+++ b/app-front/index.html
@@ -13,8 +13,8 @@
         <main>  
             <section class="align-center">
                 <div class="input-field">
-                    <input id="filtro" type="text" class="validate">
-                    <label for="filtro">Filtro(To Do)</label>
+                    <input id="filter" type="text" class="validate" oninput="indexController.filter()">
+                    <label for="filter">Filtro</label>
                 </div>
             </section>
             <section>
